fix:  added <h1> to each pdf page load and remove the <h2> that had the filename.  displays on mobile and desktop to aid SEO.  closes:#13

--- a/styles/index.css
+++ b/styles/index.css
@@ -152,9 +152,10 @@ body.resizing {
 /* PDF Viewer Section & Dynamic PDF Area (Mobile) */
 /* -------------------- */
 #pdf-viewer-section {
-  background-color: lightblue;
+  background-color: #CCD5DA;
   display: flex;
   flex-direction: column;
+  /* align-items: flex-start; */
   flex-grow: 1;
   overflow: hidden;
 }
@@ -167,7 +168,7 @@ body.resizing {
   display: flex; 
   flex-direction: row;
   align-items: center;
-  justify-content: flex-start;
+  /* justify-content: flex-start; */
   gap: 20px;
 }
 
@@ -183,11 +184,11 @@ button#open-pdf-new-tab {
   display: none; /* Hidden by default, JS will show it for mobile-PDF UI */
 }
 
-#pdf-filename-heading {
+.pdf-heading {
   font-size: 1rem;
   font-weight: normal;
   margin: 0;
-  flex-grow: 1;
+  flex-grow: 0;
 }
 
 #pdf-viewer-iframe {
